--- a/Web/assets/css/accesoYregistro.css
+++ b/Web/assets/css/accesoYregistro.css
@@ -9,9 +9,9 @@
 
 a:hover{
     cursor: pointer;
-    /* color: #050655; */
+    color: #655fc5;
     text-decoration: none;
-    /* border-color: #050655; */
+    border-color: #655fc5;
 }
 
 input{
@@ -30,7 +30,7 @@ body{
     width: 100%;
     height: 100vh;
     /* background-image: url(../img/fondo.jpg); */
-    background-color: #3b5998;
+    background-color: #4063ad;
     /* ------------------------------------------------ */
     /* background-size: cover; */
     /* background-position: center; */
@@ -53,8 +53,6 @@ body{
     border-radius: 10px;
     background-color: #fff;
     padding: 40px 60px 20px 60px;
-
-    /* box-shadow: 0px 0px 15px 0px rgba(206, 206, 206, 0.8); */
 }
 
 .formulario{
@@ -166,27 +164,15 @@ body{
     background: transparent;
 }
 
-.inputBorder{
-    width: calc(100% + 2px);
-    height: calc(100% + 2px);
+.btnOjo{
     position: absolute;
-    top: -1px;
-    left: -1px;
-    display: block;
-    pointer-events: none;
-    border-radius: 10px;
-    border: 1px solid #fc00ff;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.4s;
-    transform: scaleX(1.1) scaleY(1.3);
-}
-
-.txtUsuario:focus + .inputBorder,
-.txtContrasenia:focus + .inputBorder{
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1);
+    right: 15px;
+    top: 18px;
+    width: auto;
+    height: auto;
+    z-index: 100;
+    color: #555;
+    cursor: pointer;
 }
 
 .CbtnIngresarCrear{
@@ -231,6 +217,15 @@ body{
 
 .btnIngresarCrear:hover:before{opacity: 1;}
 
+.msmError{
+    width: 100%;
+    height: auto;
+    display: none;
+    color: #880000;
+    margin-top: 15px;
+    text-align: center;
+}
+
 .sinCuenta{
     width: 100%;
     padding-top: 30px;
@@ -253,8 +248,6 @@ body{
     font-family: 'Poppins';
     border-bottom: 1px solid #999999;
 }
-
-@media (max-width: 880px){li{display: none;}}
 
 @media (max-width: 700px){
     .contenedor{padding: 20px 20px;}
