--- a/Web/panel/styles.css
+++ b/Web/panel/styles.css
@@ -10459,6 +10459,7 @@ button.close {
 .avatar {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
 }
 .avatar-title {
     display: flex;
