--- a/Web/assets/css/accesoYregistro.css
+++ b/Web/assets/css/accesoYregistro.css
@@ -24,7 +24,7 @@ body{
     height: 100vh;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
-    background-image: url("../img/fondos/accesoYregistro.jpg");
+    /* background-image: url("../img/fondos/accesoYregistro.jpg"); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
