--- a/Web/vacunas/css/style.css
+++ b/Web/vacunas/css/style.css
@@ -1,48 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900|Roboto:100,300,400,500&display=swap");
 
-.section-padding30 {
-    padding-top: 100px;
-    padding-bottom: 140px;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1600px) {
-    .section-padding30 {
-        padding-top: 100px;
-        padding-bottom: 140px;
-    }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .section-padding30 {
-        padding-top: 100px;
-        padding-bottom: 90px;
-    }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .section-padding30 {
-        padding-top: 100px;
-        padding-bottom: 40px;
-    }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .section-padding30 {
-        padding-top: 65px;
-        padding-bottom: 10px;
-    }
-}
-@media (max-width: 575px) {
-    .section-padding30 {
-        padding-top: 65px;
-        padding-bottom: 10px;
-    }
-}
-
-.section-padding03 {
-    padding-top: 200px;
-    padding-bottom: 80px;
-}
+.section-padding30 {padding-top: 100px; padding-bottom: 140px;}
+@media only screen and (min-width: 1200px) and (max-width: 1600px) {.section-padding30 {padding-top: 100px; padding-bottom: 140px;}}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {.section-padding30 {padding-top: 100px; padding-bottom: 90px;}}
+@media only screen and (min-width: 768px) and (max-width: 991px) {.section-padding30 {padding-top: 100px; padding-bottom: 40px;}}
+@media only screen and (min-width: 576px) and (max-width: 767px) {.section-padding30 {padding-top: 65px; padding-bottom: 10px;}}
+@media (max-width: 575px) {.section-padding30 {padding-top: 65px; padding-bottom: 10px;}}
+.section-padding03 {padding-top: 200px; padding-bottom: 80px;}
 
 .our-services .single-services {
-    border: 1px solid transparent;
-    background: #fff7fe;
+    border: 1px solid #28a745;
+    background: #f7fff8;
     border-radius: 6px;
     padding: 79px 33px;
     -webkit-transition: all 0.4s ease-out 0s;
@@ -51,33 +19,18 @@
     -o-transition: all 0.4s ease-out 0s;
     transition: all 0.4s ease-out 0s;
 }
-@media (max-width: 575px) {
-    .our-services .single-services {
-        padding: 47px 19px;
-    }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .our-services .single-services {
-        padding: 47px 19px;
-    }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .our-services .single-services {
-        padding: 56px 32px;
-    }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .our-services .single-services {
-        padding: 46px 23px;
-    }
-}
-.our-services .single-services:hover {
-    box-shadow: 0px 10px 30px 0px rgba(133, 66, 189, 0.1);
-}
+
+@media (max-width: 575px) {.our-services .single-services {padding: 47px 19px;}}
+@media only screen and (min-width: 576px) and (max-width: 767px) {.our-services .single-services {padding: 47px 19px;}}
+@media only screen and (min-width: 768px) and (max-width: 991px) {.our-services .single-services {padding: 56px 32px;}}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {.our-services .single-services {padding: 46px 23px;}}
+
+.our-services .single-services:hover {box-shadow: 0px 10px 30px 0px rgba(133, 66, 189, 0.1);}
+
 .our-services .single-services .services-ion span {
     font-size: 60px;
     margin-bottom: 13px;
-    color: #ff7474;
+    color: #74ff8b;
     -webkit-transition: all 0.4s ease-out 0s;
     -moz-transition: all 0.4s ease-out 0s;
     -ms-transition: all 0.4s ease-out 0s;
@@ -89,25 +42,18 @@
     margin-bottom: 50px;
     width: 100px;
     height: 100px;
-    background: #ffedf2;
+    background: #edfff1;
     line-height: 100px;
     text-align: center;
     border-radius: 50px;
     display: inline-block;
 }
-.our-services .single-services .services-cap {
-    padding: 0 16px;
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .our-services .single-services .services-cap {
-        padding: 0;
-    }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .our-services .single-services .services-cap {
-        padding: 0;
-    }
-}
+
+.our-services .single-services .services-cap {padding: 0 16px;}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {.our-services .single-services .services-cap {padding: 0;}}
+@media only screen and (min-width: 768px) and (max-width: 991px) {.our-services .single-services .services-cap {padding: 0;}}
+
 .our-services .single-services .services-cap h5 a {
     font-weight: 600;
     font-size: 18px;
@@ -115,30 +61,11 @@
     line-height: 1.4;
     margin-bottom: 20px;
 }
+
 .our-services .single-services:hover {
-    border: 1px solid #f8c7b7;
     background: #fff;
-}
-.our-services .single-services:hover .services-ion span {
-    color: #ff2121;
-}
-.our-services .single-services:hover h5 a {
-    color: #ff2121;
+    cursor: pointer;
 }
 
-.mt-10 {
-    margin-top: 10px;
-}
-.section-top-border {
-    padding: 50px 0;
-    border-top: 1px dotted #eee;
-}
-.mb-30 {
-    margin-bottom: 30px;
-}
-.mt-30 {
-    margin-top: 30px;
-}
-.switch-wrap {
-    margin-bottom: 10px;
-}
+.our-services .single-services:hover .services-ion span {color: #28a745;}
+.our-services .single-services:hover h5 a {color: #28a745;}
